--- a/tables.html
+++ b/tables.html
@@ -17,9 +17,9 @@
         <p class="lead">Come on and eat some Tacos!</p>
         <hr class="my-4">
         <p>They are HOT!</p>
-        <a class="btn btn-primary btn-lg" href="home.html" role="button">Home</a>
-        <a class="btn btn-secondary btn-lg" href="reserve.html" role="button">Make Reservation</a>
-        <a class="btn btn-success btn-lg" href="table.html" role="button">View Table</a>
+        <a class="btn btn-primary btn-lg" id="home-button" href="home.html" role="button">Home</a>
+        <a class="btn btn-secondary btn-lg" id="reserve-button" href="reserve.html" role="button">Make Reservation</a>
+        <a class="btn btn-success btn-lg" id="table-button" href="table.html" role="button">View Table</a>
     </div>
     <div class="card" style="width: 18rem;">
         <div class="card-header">
